# serializer version: 1
# name: test_explain_builds_kwargs_subargs
  '''
  Falsifying example: inner(
      obj=MyClass(
          x=0,  # or any other generated value
          y=True,
      ),
  )
  '''
# ---
# name: test_explain_builds_subargs
  '''
  Falsifying example: inner(
      obj=MyClass(
          0,  # or any other generated value
          True,
      ),
  )
  '''
# ---
# name: test_explain_comments_basic_fail_if_either
  '''
  Falsifying example: inner(
      # The test always failed when commented parts were varied together.
      a=False,  # or any other generated value
      b=True,
      c=[],  # or any other generated value
      d=True,
      e=False,  # or any other generated value
  )
  '''
# ---
# name: test_explain_comments_basic_fail_if_not_all
  '''
  Falsifying example: inner(
      # The test sometimes passed when commented parts were varied together.
      a='',  # or any other generated value
      b='',  # or any other generated value
      c='',  # or any other generated value
  )
  '''
# ---
# name: test_explain_duplicate_param_names
  '''
  Falsifying example: inner(
      kw=0,  # or any other generated value
      b={
          'kw': '',  # or any other generated value
          'c': True,
      },
  )
  '''
# ---
# name: test_explain_fixeddict_subargs
  '''
  Falsifying example: inner(
      d={
          'x': 0,  # or any other generated value
          'y': True,
      },
  )
  '''
# ---
# name: test_explain_multi_level_nesting
  '''
  Falsifying example: inner(
      bare=0,  # or any other generated value
      outer=Outer(
          inner=Inner(x=0),  # or any other generated value
          value=True,
      ),
  )
  '''
# ---
# name: test_explain_no_together_comment_if_single_argument
  '''
  Falsifying example: inner(
      a='',
      b='',  # or any other generated value
  )
  '''
# ---
# name: test_explain_skip_subset_slices
  '''
  Falsifying example: inner(
      obj=MyClass(
          (0, False),  # or any other generated value
          y=False,
      ),
  )
  '''
# ---
# name: test_explain_tuple_multiple_varying
  '''
  Falsifying example: inner(
      t=(
          0,  # or any other generated value
          '',  # or any other generated value
          True,
      ),
  )
  '''
# ---
# name: test_explain_tuple_subargs
  '''
  Falsifying example: inner(
      t=(
          0,  # or any other generated value
          True,
      ),
  )
  '''
# ---
